@@ -7,6 +7,8 @@ Version 1.2
 -----------
 (codename not selected, to be released in 2009)
 
+- Dropped Python 2.3 compatibility.
+
 - Lexers added:
 
   * Go
